20121011 ui/gtk/pokemem.c: fix typo (Fred).
20121015 ui/win32/installer/Makefile.am: remove obsolete file (more from patch
         #3575831) (Sergio).
20121015 configure.ac: replace obsolete macros: AC_CANONICAL_SYSTEM and
         AC_PROG_LIBTOOL (more from patch #3575831) (Sergio).
20121015 Makefile.am,acinclude.m4,autogen.sh,configure.ac,m4/{glib-2.0.m4,
         gtk-2.0.m4,libxml.m4,pkg.m4,sdl.m4}: split acinclude.m4 in files in a
         m4 directory; acinclude.m4 has been removed (more from patch #3575831)
         (Sergio).
20121016 Makefile.am: distribute m4 directory and contents with the release
         tarball (Fred).
20121028 sound/coreaudiosound.c: migrate away from some deprecated APIs (Fred).
20121107 ui/xlib/{Makefile.am,xstatusbar.pl}: fix the build when source and
         build trees are different (VPATH) (bug #3584527) (Sergio).
20121111 Makefile.am,configure.ac,ui/win32/installer/fuse.nsi.in: enhance win32
         installation and distribution (patch #3580843) (Sergio).
20121112 README,fuse.c: enhance win32 installation instructions (more from
         patch #3580843) (Sergio).
20121116 INSTALL,README: move installation instructions to INSTALL file (more
         from patch #3580843) (Sergio).
20121116 Makefile.am: distribute INSTALL with distribution (Fred).
20121118 Makefile.am: use proper automake comment rather than m4 comment
         (Sergio).
20121118 configure.ac: don't double check for zlib header (bug #3586255)
         (Sergio).
20121122 sound.c: correct feedback in AY noise generator (Patrik Rak).
20121122 pokefinder/{pokemem.[ch]},ui/gtk/pokemem.c,ui/widget/pokemem.c,
         ui/win32/pokemem.c: fix presumed typo in pokemem_trainer_deactivate
         (Fred).
20121123 Makefile.am,configure.ac: Don't interrupt COMPAT_OSNAME log with other
         checks. Avoid searching for windres when not building for Windows.
         Remove --without-windres flag, previously used as a workaround
         (Sergio).